--- a/lang/fr_FR.utf8/LC_MESSAGES/newsletter.po
+++ b/lang/fr_FR.utf8/LC_MESSAGES/newsletter.po
@@ -2,11 +2,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CmsUno\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-03-06 16:52+0100\n"
-"PO-Revision-Date: 2017-03-06 16:54+0100\n"
+"POT-Creation-Date: 2022-12-07 09:53+0100\n"
+"PO-Revision-Date: 2022-12-07 09:54+0100\n"
 "Last-Translator: malgrange <jacques.malgrange@gmail.com>\n"
 "Language-Team: Jacques Malgrange <contacter@boiteasite.fr>\n"
-"Language: \n"
+"Language: fr_FR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -14,10 +14,254 @@ msgstr ""
 "Report-\t\tmsgstr-Bugs-To: \n"
 "X-Poedit-KeywordsList: _;T_\n"
 "X-Poedit-Basepath: .\n"
-"X-Poedit-Country: FRANCE\n"
 "X-Poedit-SourceCharset: iso-8859-1\n"
-"X-Poedit-Language: French\n"
+"X-Generator: Poedit 1.8.7.1\n"
 "X-Poedit-SearchPath-0: ../../..\n"
+
+#: ../../../newsletter.php:16
+msgid "Configure the plugin"
+msgstr "Configurer le plugin"
+
+#: ../../../newsletter.php:16
+msgid "Config"
+msgstr "Configuration"
+
+#: ../../../newsletter.php:17
+msgid "Edit your mailing list"
+msgstr "Editer votre liste d'email"
+
+#: ../../../newsletter.php:17
+msgid "Mailing List"
+msgstr "Liste d'email"
+
+#: ../../../newsletter.php:18
+msgid "Write a newsletter"
+msgstr "Rédiger une newsletter"
+
+#: ../../../newsletter.php:18
+msgid "Write"
+msgstr "Rédiger"
+
+#: ../../../newsletter.php:19
+msgid "Newsletter"
+msgstr "Newsletter"
+
+#: ../../../newsletter.php:23
+msgid "This plugin allows you to send a newsletter to an email list."
+msgstr "Ce plugin permet d'envoyer une newsletter à une liste de destinataire."
+
+#: ../../../newsletter.php:24
+msgid ""
+"It works with the mail() function of your server or in SMTP with your GMAIL "
+"account or with another SMTP Provider account."
+msgstr ""
+"Il fonctionne avec la function mail() du serveur ou en SMTP avec votre "
+"compte Gmail ou un autre compte SMTP."
+
+#: ../../../newsletter.php:27
+msgid "The shortcode"
+msgstr "Le Shortcode"
+
+#: ../../../newsletter.php:27
+msgid "add a field to enter his email address and receive the newsletter."
+msgstr ""
+"ajoute un champ pour entrer une adresse mail et recevoir la newsletter."
+
+#: ../../../newsletter.php:28
+msgid "The newsletter contains in footer an automatic unsubscribe link."
+msgstr ""
+"La newsletter contient un lien automatique de désinscription en pied de page."
+
+#: ../../../newsletter.php:30
+msgid ""
+"This plugin adds the excellent PHPMailer module which will then be used by "
+"other plugins (contact, users...)."
+msgstr ""
+"Ce plugin ajoute l'excellent module PHPMailer qui sera ensuite utilisé par "
+"d'autres plugins (contact, utilisateurs...)."
+
+#: ../../../newsletter.php:33
+msgid "Subject"
+msgstr "Sujet"
+
+#: ../../../newsletter.php:35
+msgid "Content"
+msgstr "Contenu"
+
+#: ../../../newsletter.php:41
+msgid "Saves the contents"
+msgstr "Enregistre le contenu"
+
+#: ../../../newsletter.php:41 ../../../newsletter.php:112
+msgid "Save"
+msgstr "Enregistrer"
+
+#: ../../../newsletter.php:42 ../../../newsletter.php:43
+msgid "Sending"
+msgstr "Envoyer"
+
+#: ../../../newsletter.php:42 ../../../newsletter.php:43
+msgid "finished."
+msgstr "terminé."
+
+#: ../../../newsletter.php:42
+msgid "Send only to Admin"
+msgstr "Envoyer uniquement vers Admin"
+
+#: ../../../newsletter.php:42
+msgid "Send to test"
+msgstr "Envoyer pour Test"
+
+#: ../../../newsletter.php:43
+msgid "Send the newsletter"
+msgstr "Envoyer la newsletter"
+
+#: ../../../newsletter.php:43
+msgid "Send"
+msgstr "Envoyer"
+
+#: ../../../newsletter.php:48
+msgid "New recipient"
+msgstr "Nouvelle adresse"
+
+#: ../../../newsletter.php:53
+msgid "Create group"
+msgstr "Créer un groupe"
+
+#: ../../../newsletter.php:56
+msgid "Add a new recipient"
+msgstr "Ajouter une adresse mail"
+
+#: ../../../newsletter.php:56
+msgid "Add"
+msgstr "Ajouter"
+
+#: ../../../newsletter.php:63
+msgid "Email"
+msgstr "Email"
+
+#: ../../../newsletter.php:64
+msgid "Group"
+msgstr "Groupes"
+
+#: ../../../newsletter.php:65
+msgid "Action"
+msgstr "Action"
+
+#: ../../../newsletter.php:75
+msgid "The User group contains the members of the Users plugin :"
+msgstr "Le groupe User contient les membres du plugin Users :"
+
+#: ../../../newsletter.php:75
+msgid "members."
+msgstr "membres."
+
+#: ../../../newsletter.php:83
+msgid "Sending method"
+msgstr "Méthode d'envoi"
+
+#: ../../../newsletter.php:86
+msgid "Method"
+msgstr "Méthode"
+
+#: ../../../newsletter.php:89
+msgid "Default (PHP)"
+msgstr "Défaut (PHP)"
+
+#: ../../../newsletter.php:90
+msgid "Gmail (SMTP)"
+msgstr "Gmail (SMTP)"
+
+#: ../../../newsletter.php:91
+msgid "Other SMTP"
+msgstr "Autre SMTP"
+
+#: ../../../newsletter.php:94
+msgid "Newsletter is sent by using this method."
+msgstr "La newsletter est envoyée avec cette méthode."
+
+#: ../../../newsletter.php:97
+msgid "Username"
+msgstr "Nom d'utilisateur"
+
+#: ../../../newsletter.php:99
+msgid "Email address for Gmail, username for other SMTP."
+msgstr "Adresse email pour Gmail, nom d'utilisateur sinon."
+
+#: ../../../newsletter.php:102
+msgid "Password"
+msgstr "Mot de passe"
+
+#: ../../../newsletter.php:104
+msgid "Account password for this username. (Registered encrypted)"
+msgstr "Mot de passe de votre compte Gmail. (La sauvegarde sera chiffrée)"
+
+#: ../../../newsletter.php:107
+msgid "Host"
+msgstr "Hôte"
+
+#: ../../../newsletter.php:109
+msgid "URL of your SMTP Provider"
+msgstr "URL de votre fournisseur SMTP"
+
+#: ../../../newsletter.php:112
+msgid "Save settings"
+msgstr "Sauvegarde des paramètres"
+
+#: ../../../newsletter.php:134
+msgid "newsletter saved"
+msgstr "newsletter sauvegardée"
+
+#: ../../../newsletter.php:135
+msgid "Impossible backup"
+msgstr "Sauvegarde impossible"
+
+#: ../../../newsletter.php:152
+msgid "config saved"
+msgstr "Configuration sauvegardée"
+
+#: ../../../newsletter.php:153 ../../../newsletter.php:249
+#: ../../../newsletter.php:259 ../../../newsletter.php:294
+#: ../../../newsletterSubscribe.php:94
+msgid "Error"
+msgstr "Erreur"
+
+#: ../../../newsletter.php:180
+msgid "External"
+msgstr "Externe"
+
+#: ../../../newsletter.php:180
+msgid "Manual"
+msgstr "Manuel"
+
+#: ../../../newsletter.php:246 ../../../newsletterSubscribe.php:23
+msgid "email added"
+msgstr "email ajouté"
+
+#: ../../../newsletter.php:247
+msgid "impossible add"
+msgstr "ajout impossible"
+
+#: ../../../newsletter.php:271 ../../../newsletterSubscribe.php:56
+msgid "email deleted"
+msgstr "email effacé"
+
+#: ../../../newsletter.php:272
+msgid "undeletable"
+msgstr "Effacement impossible"
+
+#: ../../../newsletter.php:274
+msgid "No data"
+msgstr "Pas de données"
+
+#: ../../../newsletter.php:300 ../../../newsletter.php:302
+#: ../../../newsletterSubscribe.php:76 ../../../newsletterSubscribe.php:78
+msgid "Unsubscribe"
+msgstr "Désinscription"
+
+#: ../../../newsletter.php:318 ../../../newsletter.php:330
+msgid "Failure"
+msgstr "Echec"
 
 #: ../../../newsletterMake.php:13
 msgid "Email address"
@@ -27,251 +271,9 @@ msgstr "Adresse email"
 msgid "Subscribe"
 msgstr "Inscription"
 
-#: ../../../newsletterMake.php:16
-#: ../../../newsletterSubscribe.php:93
+#: ../../../newsletterMake.php:16 ../../../newsletterSubscribe.php:93
 msgid "You will receive an email to confirm"
 msgstr "Vous allez recevoir un email pour confirmation"
-
-#: ../../../newsletter.php:18
-msgid "Configure the plugin"
-msgstr "Configurer le plugin"
-
-#: ../../../newsletter.php:18
-msgid "Config"
-msgstr "Configuration"
-
-#: ../../../newsletter.php:19
-msgid "Edit your mailing list"
-msgstr "Editer votre liste d'email"
-
-#: ../../../newsletter.php:19
-msgid "Mailing List"
-msgstr "Liste d'email"
-
-#: ../../../newsletter.php:20
-msgid "Write a newsletter"
-msgstr "Rédiger une newsletter"
-
-#: ../../../newsletter.php:20
-msgid "Write"
-msgstr "Rédiger"
-
-#: ../../../newsletter.php:21
-msgid "Newsletter"
-msgstr "Newsletter"
-
-#: ../../../newsletter.php:25
-msgid "This plugin allows you to send a newsletter to an email list."
-msgstr "Ce plugin permet d'envoyer une newsletter à une liste de destinataire."
-
-#: ../../../newsletter.php:26
-msgid "It works with the mail() function of your server or in SMTP with your GMAIL account or with another SMTP Provider account."
-msgstr "Il fonctionne avec la function mail() du serveur ou en SMTP avec votre compte Gmail ou un autre compte SMTP."
-
-#: ../../../newsletter.php:29
-msgid "The shortcode"
-msgstr "Le Shortcode"
-
-#: ../../../newsletter.php:29
-msgid "add a field to enter his email address and receive the newsletter."
-msgstr "ajoute un champ pour entrer une adresse mail et recevoir la newsletter."
-
-#: ../../../newsletter.php:30
-msgid "The newsletter contains in footer an automatic unsubscribe link."
-msgstr "La newsletter contient un lien automatique de désinscription en pied de page."
-
-#: ../../../newsletter.php:34
-msgid "Subject"
-msgstr "Sujet"
-
-#: ../../../newsletter.php:36
-msgid "Content"
-msgstr "Contenu"
-
-#: ../../../newsletter.php:42
-msgid "Saves the contents"
-msgstr "Enregistre le contenu"
-
-#: ../../../newsletter.php:42
-#: ../../../newsletter.php:109
-msgid "Save"
-msgstr "Enregistrer"
-
-#: ../../../newsletter.php:43
-#: ../../../newsletter.php:44
-msgid "Sending"
-msgstr "Envoyer"
-
-#: ../../../newsletter.php:43
-#: ../../../newsletter.php:44
-msgid "finished."
-msgstr "terminé."
-
-#: ../../../newsletter.php:43
-msgid "Send only to Admin"
-msgstr "Envoyer uniquement vers Admin"
-
-#: ../../../newsletter.php:43
-msgid "Send to test"
-msgstr "Envoyer pour Test"
-
-#: ../../../newsletter.php:44
-msgid "Send the newsletter"
-msgstr "Envoyer la newsletter"
-
-#: ../../../newsletter.php:44
-msgid "Send"
-msgstr "Envoyer"
-
-#: ../../../newsletter.php:49
-msgid "New recipient"
-msgstr "Nouvelle adresse"
-
-#: ../../../newsletter.php:52
-msgid "Create group"
-msgstr "Créer un groupe"
-
-#: ../../../newsletter.php:54
-msgid "Add a new recipient"
-msgstr "Ajouter une adresse mail"
-
-#: ../../../newsletter.php:54
-msgid "Add"
-msgstr "Ajouter"
-
-#: ../../../newsletter.php:59
-msgid "Email"
-msgstr "Email"
-
-#: ../../../newsletter.php:60
-msgid "Group"
-msgstr "Groupes"
-
-#: ../../../newsletter.php:61
-msgid "Action"
-msgstr "Action"
-
-#: ../../../newsletter.php:72
-msgid "The User group contains the members of the Users plugin :"
-msgstr "Le groupe User contient les membres du plugin Users :"
-
-#: ../../../newsletter.php:72
-msgid "members."
-msgstr "membres."
-
-#: ../../../newsletter.php:80
-msgid "Sending method"
-msgstr "Méthode d'envoi"
-
-#: ../../../newsletter.php:83
-msgid "Method"
-msgstr "Méthode"
-
-#: ../../../newsletter.php:86
-msgid "Default (PHP)"
-msgstr "Défaut (PHP)"
-
-#: ../../../newsletter.php:87
-msgid "Gmail (SMTP)"
-msgstr "Gmail (SMTP)"
-
-#: ../../../newsletter.php:88
-msgid "Other SMTP"
-msgstr "Autre SMTP"
-
-#: ../../../newsletter.php:91
-msgid "Newsletter is sent by using this method."
-msgstr "La newsletter est envoyée avec cette méthode."
-
-#: ../../../newsletter.php:94
-msgid "Username"
-msgstr "Nom d'utilisateur"
-
-#: ../../../newsletter.php:96
-msgid "Email address for Gmail, username for other SMTP."
-msgstr "Adresse email pour Gmail, nom d'utilisateur sinon."
-
-#: ../../../newsletter.php:99
-msgid "Password"
-msgstr "Mot de passe"
-
-#: ../../../newsletter.php:101
-msgid "Account password for this username. (Registered encrypted)"
-msgstr "Mot de passe de votre compte Gmail. (La sauvegarde sera chiffrée)"
-
-#: ../../../newsletter.php:104
-msgid "Host"
-msgstr "Hôte"
-
-#: ../../../newsletter.php:106
-msgid "URL of your SMTP Provider"
-msgstr "URL de votre fournisseur SMTP"
-
-#: ../../../newsletter.php:109
-msgid "Save settings"
-msgstr "Sauvegarde des paramètres"
-
-#: ../../../newsletter.php:132
-msgid "newsletter saved"
-msgstr "newsletter sauvegardée"
-
-#: ../../../newsletter.php:133
-msgid "Impossible backup"
-msgstr "Sauvegarde impossible"
-
-#: ../../../newsletter.php:151
-msgid "config saved"
-msgstr "Configuration sauvegardée"
-
-#: ../../../newsletter.php:152
-#: ../../../newsletter.php:257
-#: ../../../newsletter.php:269
-#: ../../../newsletter.php:308
-#: ../../../newsletterSubscribe.php:94
-msgid "Error"
-msgstr "Erreur"
-
-#: ../../../newsletter.php:186
-msgid "External"
-msgstr "Externe"
-
-#: ../../../newsletter.php:186
-msgid "Manual"
-msgstr "Manuel"
-
-#: ../../../newsletter.php:254
-#: ../../../newsletterSubscribe.php:23
-msgid "email added"
-msgstr "email ajouté"
-
-#: ../../../newsletter.php:255
-msgid "impossible add"
-msgstr "ajout impossible"
-
-#: ../../../newsletter.php:283
-#: ../../../newsletterSubscribe.php:56
-msgid "email deleted"
-msgstr "email effacé"
-
-#: ../../../newsletter.php:284
-msgid "undeletable"
-msgstr "Effacement impossible"
-
-#: ../../../newsletter.php:286
-msgid "No data"
-msgstr "Pas de données"
-
-#: ../../../newsletter.php:314
-#: ../../../newsletter.php:316
-#: ../../../newsletterSubscribe.php:76
-#: ../../../newsletterSubscribe.php:78
-msgid "Unsubscribe"
-msgstr "Désinscription"
-
-#: ../../../newsletter.php:333
-#: ../../../newsletter.php:346
-msgid "Failure"
-msgstr "Echec"
 
 #: ../../../newsletterSubscribe.php:77
 msgid "Confirm registration by clicking this link"
